@@ -1,4 +1,7 @@
 2009-05-01 Iuri Fernandes <iurifq@gmail.com>
+* Fixed bugs in login system.
+
+2009-05-01 Iuri Fernandes <iurifq@gmail.com>
 * Login structure created. Error messages and index are still missing.
 
 2009-05-01 Iuri Fernandes <iurifq@gmail.com>
